2007-10-02  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Stephane Loeuillet <leroutier@gmail.com>

	* capplets/about-me/gnome-about-me.desktop.in.in:
	* capplets/accessibility/at-properties/at-properties.desktop.in.in:
	* capplets/accessibility/keyboard/accessibility-keyboard.desktop.in.in:
	* capplets/appearance/data/gnome-appearance-properties.desktop.in.in:
	* capplets/appearance/data/gnome-theme-installer.desktop.in.in:
	* capplets/appearance/theme-save.c:
	* capplets/default-applications/default-applications.desktop.in.in:
	* capplets/default-applications/gnome-at-session.desktop.in.in:
	* capplets/display/display-properties.desktop.in.in:
	* capplets/keybindings/keybinding.desktop.in.in:
	* capplets/keyboard/keyboard.desktop.in.in:
	* capplets/mouse/gnome-settings-mouse.desktop.in.in:
	* capplets/network/gnome-network-preferences.desktop.in.in:
	* capplets/sound/gnome-settings-sound.desktop.in.in:
	* capplets/windows/window-properties.desktop.in.in:
	* shell/gnomecc.desktop.in.in:
	* shell/gnomecc.directory.in:
	* vfs-methods/fontilus/font-method.directory.in:
	* vfs-methods/fontilus/gnome-font-viewer.desktop.in.in:
	* vfs-methods/themus/theme-method.directory.in:
	* vfs-methods/themus/themus-theme-applier.desktop.in.in:
	desktop file fixes: don't use the deprecated Encoding tag, change
	Terminal=0 to Terminal=false, remove empty Categories= (bug #481740)

2007-09-28  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: fix typo in order to correctly substitute XCursor CFLAGS

2007-09-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.20.0.

2007-09-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.92.

2007-08-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.91.

2007-08-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.90.

2007-08-02  Rodrigo Moya <rodrigo@gnome-db.org>
