@@ -1,3 +1,7 @@
+2007-10-08  Sergey Udaltsov <svu@gnome.org>
+
+	* configure.in: bumping libgnomekbd requirement to 2.21.1
+
 2007-10-02  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Stephane Loeuillet <leroutier@gmail.com>
